# local-redash

./: .gitignore  Dockerfile  Dockerfile.db  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
db/: init-db.sh
local-redash/: main.py
local_redash/: command_executer.py  config.yml  containers.py  main.py
local_redash/commands/: base.py  data_source_list.py  export_query.py  query.py  query_export.py  query_list.py  show_query.py
local_redash/lib/: redash_client.py
local_redash/models/: redash_client.py
test/: conftest.py  test_command.py  test_config_file.py  test_model.py  test_redash_client.py  test_search_query.py
test/testdata/: data_source_detail.json  data_source_list.json  query_list.json  query_result.json  query_result_rows.json
