[tool.poetry]
name = "local-redash"
version = "0.1.0"
description = ""
authors = ["Makoto Yoshioka <y.mako2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
tabulate = "^0.8.10"
click = "^8.1.3"
dependency-injector = "^4.41.0"
pyyaml = "^6.0"
pydantic = "^1.10.7"
polyfactory = "^2.0.0a1"
httpx = "^0.24.0"
timeout-decorator = "^0.5.0"
sqlfluff = "^2.1.1"
wcwidth = "^0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pytest-httpserver = "^1.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
ignore = "D100,D101,D102,D103,D104,D107,D105"